--- a/EC_Repuetos_v2/Views/Login/Login.cshtml
+++ b/EC_Repuetos_v2/Views/Login/Login.cshtml
@@ -49,10 +49,9 @@
 
                                     <div class="form-group">
                                         <div class="col-md-offset-2 col-md-10">
-                                            <input type="submit" value="Registrarse" class="button" />
+                                            <input type="button" value="Registrarse" onclick="location.href='@Url.Action("Create", "EC_USUARIOS")'"  class="button" />
                                         </div>
                                     </div>
-
                                 </form>
                             </div>
                         </div>
