--- a/EC_Repuetos_v2/Views/EC_USUARIOS/Create.cshtml
+++ b/EC_Repuetos_v2/Views/EC_USUARIOS/Create.cshtml
@@ -104,8 +104,8 @@
 
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" value="Registrarse" class="btn btn-default" />
-                                <input type="submit" value="Regresar" class="btn btn-default" />
+                                <input type="submit" value="Registrarse" class="btn btn-default" onclick="location.href='@Url.Action("Login", "Login")'"/>
+                                <input type="submit" value="Regresar" class="btn btn-default" onclick="location.href='@Url.Action("Login", "Login")'"/>
                             </div>
                         </div>
                     </div>
